# chargewise

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.nas.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  scheduler.sh
backend/chargewise/: __init__.py  config.py
backend/chargewise/api/: __init__.py  app.py  auth.py  schemas.py
backend/chargewise/engine/: __init__.py  cost.py  models.py  savings.py
backend/chargewise/ingest/: __init__.py  charge_sessions.py  fuel_prices.py  octopus_graphql.py  octopus_rest.py  pipeline.py  teslafi_history.py
backend/chargewise/store/: __init__.py  db.py  models.py  repositories.py
backend/tests/: test_api.py  test_cost.py  test_fuel_prices.py  test_octopus.py  test_pipeline.py  test_savings.py  test_store.py  test_sync_status.py  test_teslafi_history.py
backend/tests/fixtures/: octopus_iog_region_h_2026-06-15.json
docs/: BACKLOG.md  DELIVERY-PLAN.md  METHODOLOGY.md  NEW-SESSION-PROMPT.md  NEXT-SESSION-PROMPT.md  OCTOPUS-OAUTH-SETUP.md  PRD.md  PROJECT-STATUS.md  TESLAFI-SUPPORT-EMAIL.md
ha/: README.md  secrets.example.yaml
ha/dashboards/: chargewise.yaml
scripts/: add-firewall-rule.ps1  deploy-nas.py
